--- a/Advanced/PointRend/configs/Base-PointRend-Semantic-FPN.yaml
+++ b/Advanced/PointRend/configs/Base-PointRend-Semantic-FPN.yaml
@@ -1,4 +1,4 @@
-_BASE_: "../../../../configs/Base-RCNN-FPN.yaml"
+_BASE_: "./Base-RCNN-FPN.yaml"
 MODEL:
   META_ARCHITECTURE: "SemanticSegmentor"
   BACKBONE:
